# adb-mcp

./: .gitignore  LICENSE  README.md  TOOLS_OVERVIEW.md  fastmcp_server.py  pyproject.toml  requirements.txt  server.py
src/: __init__.py
src/utils/: __init__.py  adb_helper.py
